fix form centering issue on mobile formal

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -135,7 +135,6 @@ form input{
 .content li{
     display: flex;
     flex-direction: column;
-    padding-left: 10%;
     margin-bottom: 20%;
 }
 
